# quant

./: .gitignore  pyproject.toml
.github/workflows/: python-cron.yaml
data/index/: sh000001.csv  sh000016.csv  sh000300.csv  sh000680.csv  sh000688.csv  sh000852.csv  sh000905.csv  sh000906.csv  sz399006.csv  sz399303.csv  sz399673.csv
gold/: momentum.py
index/: download.py  rotation.py
