[project]
name = "quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "akshare>=1.17.91",
    "baostock>=0.8.9",
    "bokeh>=3.4.3",
    "pandas-market-calendars>=5.1.3",
    "polars>=1.35.2",
    "pyarrow>=21.0.0",
]
